2015-11-18  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (SignRPMsKojiRequestThread)
	(SignRPMsKojiReplyThread): New classes, split from...
	(SignRPMsKojiThread): ... this.
	(SignRPMsKojiRequestThread._real_run)
	(SignRPMsSendRequestThread._real_run): Rely on utils.WorkerThread to
	put the end-of-stream None value to the queue when done.
	(SignRPMsRequestHandler.post_request_phase): Use
	SignRPMsKojiRequestThread and SignRPMsKojiReplyThread instead of the
	shared SignRPMsKojiThread.

	* src/utils.py (WorkerThread.__init__): New member
	ignored_exception_types.
	(WorkerThread.run): Log an uncaught exception in self._real_run()
	immediately, using self.ignored_exception_types.
	(run_worker_threads): Initialize thread's ignored_exception_types.

2013-02-26  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (KojiClient.add_signature): Raise an exception instead
	of just silently logging a warning.

2012-07-17  Miloslav Trmač  <mitr@redhat.com>

	* configure.ac: Release 0.100.
	* NEWS: Update.

	* config/bridge.conf: Document per-Koji instance required-fas-group-*
	variables.
	* src/bridge.py (BridgeConfiguration._add_sections): Recognize '[koji]'
	section.
	(BridgeConfiguration._read_configuration): Set up self.koji_fas_groups.
	(BridgeConnection.__forward_request_headers): Authorize user access to
	Koji instance.
	(BridgeConnection.__check_koji_instance_access): New method.

2012-07-16  Miloslav Trmač  <mitr@redhat.com>

	* src/bridge.py (BridgeConnection.__terminate_client_connection):
	Document why this is only necessary for the client-bridge connection.

2012-07-16  Miloslav Trmač  <mitr@redhat.com>

	* src/utils.py (koji_read_config): Require 'topurl' instead of 'pkgurl'.
	* src/bridge.py (KojiClient.__init__): New member self.__koji_pathinfo.
	(KojiClient.__get_session): Initialize self.__koji_pathinfo from
	topurl in Koji configuration.
	(KojiClient.get_rpm_url): Use self.__koji_pathinfo.build instead of